--- a/Gooze/Base.lproj/LaunchScreen.storyboard
+++ b/Gooze/Base.lproj/LaunchScreen.storyboard
@@ -1,11 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -21,27 +21,51 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gooze-logo" translatesAutoresizingMaskIntoConstraints="NO" id="7xa-cL-wLQ">
-                                <rect key="frame" x="99" y="207.5" width="122" height="153"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="122" id="3qO-0G-T7X"/>
-                                    <constraint firstAttribute="height" constant="153" id="T4r-1T-ycg"/>
-                                </constraints>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="main-background" translatesAutoresizingMaskIntoConstraints="NO" id="hMo-lp-76O">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                             </imageView>
+                            <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kSd-Mh-mRi">
+                                <rect key="frame" x="115" y="185" width="91" height="198"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="gooze-logo-1" translatesAutoresizingMaskIntoConstraints="NO" id="uuL-NN-R5N">
+                                        <rect key="frame" x="0.0" y="0.0" width="91" height="145"/>
+                                    </imageView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="gooze-text" translatesAutoresizingMaskIntoConstraints="NO" id="k90-VM-uBb">
+                                        <rect key="frame" x="0.0" y="145" width="91" height="33"/>
+                                    </imageView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="uuL-NN-R5N" firstAttribute="leading" secondItem="kSd-Mh-mRi" secondAttribute="leading" id="0Wv-Yb-wIY"/>
+                                    <constraint firstAttribute="trailing" secondItem="uuL-NN-R5N" secondAttribute="trailing" id="14N-M0-zQQ"/>
+                                    <constraint firstAttribute="trailing" secondItem="k90-VM-uBb" secondAttribute="trailing" id="8Zj-hw-xKl"/>
+                                    <constraint firstItem="k90-VM-uBb" firstAttribute="top" secondItem="uuL-NN-R5N" secondAttribute="bottom" id="VhX-JJ-ajx"/>
+                                    <constraint firstAttribute="height" constant="198" id="W30-4r-5lV"/>
+                                    <constraint firstItem="k90-VM-uBb" firstAttribute="leading" secondItem="kSd-Mh-mRi" secondAttribute="leading" id="c4K-OD-Yxv"/>
+                                    <constraint firstAttribute="width" constant="91" id="pGh-ok-htB"/>
+                                    <constraint firstItem="uuL-NN-R5N" firstAttribute="top" secondItem="kSd-Mh-mRi" secondAttribute="top" id="uOX-mb-ja4"/>
+                                    <constraint firstAttribute="bottom" secondItem="k90-VM-uBb" secondAttribute="bottom" constant="20" id="wAL-OK-AVE"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="0.094117647058823528" green="0.098039215686274508" blue="0.10980392156862745" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="7xa-cL-wLQ" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="6jw-DP-Luf"/>
-                            <constraint firstItem="7xa-cL-wLQ" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="CG7-fE-czP"/>
+                            <constraint firstItem="kSd-Mh-mRi" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="ACh-YE-488"/>
+                            <constraint firstItem="kSd-Mh-mRi" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="Fkq-o2-595"/>
+                            <constraint firstAttribute="bottom" secondItem="hMo-lp-76O" secondAttribute="bottom" id="S7s-Y6-cMs"/>
+                            <constraint firstItem="hMo-lp-76O" firstAttribute="trailing" secondItem="Ze5-6b-2t3" secondAttribute="trailing" id="Z9J-1y-3rM"/>
+                            <constraint firstItem="hMo-lp-76O" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="ZVf-31-QVr"/>
+                            <constraint firstItem="hMo-lp-76O" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="n4X-MI-j98"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="52" y="374.66266866566718"/>
+            <point key="canvasLocation" x="50.625" y="373.94366197183098"/>
         </scene>
     </scenes>
     <resources>
-        <image name="gooze-logo" width="378" height="492"/>
+        <image name="gooze-logo-1" width="252" height="307"/>
+        <image name="gooze-text" width="160" height="50"/>
+        <image name="main-background" width="750" height="1334"/>
     </resources>
 </document>
