--- a/Gooze/Base.lproj/Main.storyboard
+++ b/Gooze/Base.lproj/Main.storyboard
@@ -32,23 +32,56 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dYV-3i-SEh">
+                                <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                            </view>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="main-background" translatesAutoresizingMaskIntoConstraints="NO" id="fA6-nB-KSM">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                             </imageView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CI3-Hb-fkl" customClass="GZEDoubleCtrlView" customModule="Gooze" customModuleProvider="target">
-                                <rect key="frame" x="16" y="284" width="288" height="284"/>
-                            </view>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hsk-Kh-A4v">
+                                <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Y7U-Mf-1Cz">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CI3-Hb-fkl" customClass="GZEDoubleCtrlView" customModule="Gooze" customModuleProvider="target">
+                                                <rect key="frame" x="8" y="252" width="304" height="252"/>
+                                            </view>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="CI3-Hb-fkl" firstAttribute="height" secondItem="Y7U-Mf-1Cz" secondAttribute="height" multiplier="0.5" id="2Po-dZ-HKb"/>
+                                            <constraint firstItem="CI3-Hb-fkl" firstAttribute="leading" secondItem="Y7U-Mf-1Cz" secondAttribute="leading" constant="8" id="5Y5-he-H0Q"/>
+                                            <constraint firstAttribute="bottom" secondItem="CI3-Hb-fkl" secondAttribute="bottom" id="GKc-EB-fZp"/>
+                                            <constraint firstAttribute="trailing" secondItem="CI3-Hb-fkl" secondAttribute="trailing" constant="8" id="ivw-yt-rOY"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="Y7U-Mf-1Cz" firstAttribute="top" secondItem="hsk-Kh-A4v" secondAttribute="top" id="Bu1-WL-crD"/>
+                                    <constraint firstItem="Y7U-Mf-1Cz" firstAttribute="leading" secondItem="hsk-Kh-A4v" secondAttribute="leading" id="I32-ue-fyw"/>
+                                    <constraint firstAttribute="trailing" secondItem="Y7U-Mf-1Cz" secondAttribute="trailing" id="gnS-LT-f9d"/>
+                                    <constraint firstAttribute="bottom" secondItem="Y7U-Mf-1Cz" secondAttribute="bottom" id="lpW-4q-30V"/>
+                                </constraints>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" red="0.21568627450980393" green="0.2196078431372549" blue="0.23921568627450979" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="fA6-nB-KSM" secondAttribute="trailing" id="1hi-ga-e03"/>
-                            <constraint firstItem="CI3-Hb-fkl" firstAttribute="leading" secondItem="889-jd-Zop" secondAttribute="leadingMargin" id="EHd-Hm-qEB"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="CI3-Hb-fkl" secondAttribute="trailing" id="Jr9-Bc-gvO"/>
+                            <constraint firstItem="Y7U-Mf-1Cz" firstAttribute="height" secondItem="dYV-3i-SEh" secondAttribute="height" id="AOD-Uz-kJM"/>
+                            <constraint firstItem="hsk-Kh-A4v" firstAttribute="height" secondItem="dYV-3i-SEh" secondAttribute="height" id="Sna-WV-hq3"/>
                             <constraint firstItem="fA6-nB-KSM" firstAttribute="top" secondItem="889-jd-Zop" secondAttribute="top" id="Tup-MB-1Dm"/>
+                            <constraint firstItem="hsk-Kh-A4v" firstAttribute="top" secondItem="5uT-mo-BHf" secondAttribute="bottom" id="VdP-Tb-zKZ"/>
                             <constraint firstAttribute="bottom" secondItem="fA6-nB-KSM" secondAttribute="bottom" id="Vsx-zw-gNO"/>
-                            <constraint firstItem="MHZ-m2-D39" firstAttribute="top" secondItem="CI3-Hb-fkl" secondAttribute="bottom" id="aGf-4J-nxK"/>
+                            <constraint firstItem="MHZ-m2-D39" firstAttribute="top" secondItem="dYV-3i-SEh" secondAttribute="bottom" id="Wrf-wn-pqM"/>
+                            <constraint firstAttribute="bottom" secondItem="hsk-Kh-A4v" secondAttribute="bottom" id="XZB-6R-de6"/>
+                            <constraint firstItem="dYV-3i-SEh" firstAttribute="leading" secondItem="889-jd-Zop" secondAttribute="leading" id="acZ-HZ-YcK"/>
+                            <constraint firstItem="hsk-Kh-A4v" firstAttribute="leading" secondItem="889-jd-Zop" secondAttribute="leading" id="d8n-b6-b5l"/>
+                            <constraint firstAttribute="trailing" secondItem="hsk-Kh-A4v" secondAttribute="trailing" id="eZe-US-IRQ"/>
+                            <constraint firstAttribute="trailing" secondItem="dYV-3i-SEh" secondAttribute="trailing" id="hnP-0J-HWS"/>
+                            <constraint firstItem="Y7U-Mf-1Cz" firstAttribute="width" secondItem="dYV-3i-SEh" secondAttribute="width" id="rUE-Pr-0hF"/>
+                            <constraint firstItem="hsk-Kh-A4v" firstAttribute="width" secondItem="dYV-3i-SEh" secondAttribute="width" id="sEX-rI-9FO"/>
                             <constraint firstItem="fA6-nB-KSM" firstAttribute="leading" secondItem="889-jd-Zop" secondAttribute="leading" id="vst-m1-qSp"/>
-                            <constraint firstItem="CI3-Hb-fkl" firstAttribute="height" secondItem="889-jd-Zop" secondAttribute="height" multiplier="0.5" id="ymV-n0-lGD"/>
+                            <constraint firstItem="dYV-3i-SEh" firstAttribute="top" secondItem="5uT-mo-BHf" secondAttribute="bottom" id="wyz-v0-Wft"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="Jwv-pn-kdh">
@@ -1005,7 +1038,7 @@
         <image name="searching-radius-small" width="210" height="210"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="akO-BX-PMh"/>
+        <segue reference="Lsk-jR-YPn"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
 </document>
