--- a/Gooze/Base.lproj/Main.storyboard
+++ b/Gooze/Base.lproj/Main.storyboard
@@ -934,7 +934,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dO2-in-Qrd">
                                 <rect key="frame" x="0.0" y="64" width="320" height="424"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4hT-lE-ril">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4hT-lE-ril">
                                         <rect key="frame" x="0.0" y="0.0" width="320" height="424"/>
                                     </imageView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MLo-Oz-9ew">
@@ -987,7 +987,7 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eEO-4Q-4hb">
                                         <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
                                         <subviews>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cLL-wI-EnK">
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cLL-wI-EnK">
                                                 <rect key="frame" x="5" y="5" width="72.5" height="70"/>
                                                 <color key="backgroundColor" red="0.30196078430000001" green="0.30196078430000001" blue="0.30196078430000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             </imageView>
@@ -997,7 +997,10 @@
                                                     <constraint firstAttribute="height" constant="22" id="cJq-xB-zoH"/>
                                                     <constraint firstAttribute="width" constant="32" id="jd8-7U-tsh"/>
                                                 </constraints>
-                                                <state key="normal" title="Button" backgroundImage="camera-153-icon"/>
+                                                <state key="normal" backgroundImage="camera-153-icon"/>
+                                                <connections>
+                                                    <action selector="addPhoto:" destination="66d-od-zfu" eventType="touchUpInside" id="nVc-hB-WJj"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <constraints>
@@ -1012,7 +1015,7 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HMy-96-CBH">
                                         <rect key="frame" x="80" y="0.0" width="80" height="80"/>
                                         <subviews>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="FIG-bV-RA2">
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="FIG-bV-RA2">
                                                 <rect key="frame" x="2.5" y="5" width="75" height="70"/>
                                                 <color key="backgroundColor" red="0.30196078430000001" green="0.30196078430000001" blue="0.30196078430000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             </imageView>
@@ -1022,7 +1025,10 @@
                                                     <constraint firstAttribute="height" constant="22" id="eM1-ji-QgX"/>
                                                     <constraint firstAttribute="width" constant="32" id="vsL-nK-oP3"/>
                                                 </constraints>
-                                                <state key="normal" title="Button" backgroundImage="camera-153-icon"/>
+                                                <state key="normal" backgroundImage="camera-153-icon"/>
+                                                <connections>
+                                                    <action selector="addPhoto:" destination="66d-od-zfu" eventType="touchUpInside" id="OVI-Ev-eco"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <constraints>
@@ -1037,7 +1043,7 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SYJ-dX-P0C">
                                         <rect key="frame" x="160" y="0.0" width="80" height="80"/>
                                         <subviews>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="FYw-1F-W7J">
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="FYw-1F-W7J">
                                                 <rect key="frame" x="2.5" y="5" width="75" height="70"/>
                                                 <color key="backgroundColor" red="0.30196078430000001" green="0.30196078430000001" blue="0.30196078430000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             </imageView>
@@ -1047,7 +1053,10 @@
                                                     <constraint firstAttribute="width" constant="32" id="fJg-nU-ZfD"/>
                                                     <constraint firstAttribute="height" constant="22" id="kLH-Xa-D32"/>
                                                 </constraints>
-                                                <state key="normal" title="Button" backgroundImage="camera-153-icon"/>
+                                                <state key="normal" backgroundImage="camera-153-icon"/>
+                                                <connections>
+                                                    <action selector="addPhoto:" destination="66d-od-zfu" eventType="touchUpInside" id="u2D-U1-xj0"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <constraints>
@@ -1062,7 +1071,7 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hi0-EO-MKC">
                                         <rect key="frame" x="240" y="0.0" width="80" height="80"/>
                                         <subviews>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="TZt-Hl-BzA">
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="TZt-Hl-BzA">
                                                 <rect key="frame" x="2.5" y="5" width="72.5" height="70"/>
                                                 <color key="backgroundColor" red="0.30196078430000001" green="0.30196078430000001" blue="0.30196078430000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             </imageView>
@@ -1073,6 +1082,9 @@
                                                     <constraint firstAttribute="height" constant="22" id="lok-rd-3bW"/>
                                                 </constraints>
                                                 <state key="normal" backgroundImage="camera-153-icon"/>
+                                                <connections>
+                                                    <action selector="addPhoto:" destination="66d-od-zfu" eventType="touchUpInside" id="YpD-Bt-4m7"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <constraints>
@@ -1142,10 +1154,18 @@
                         <barButtonItem key="rightBarButtonItem" title="Guardar" id="ueT-4a-Aly"/>
                     </navigationItem>
                     <connections>
+                        <outlet property="editButton2" destination="ggh-qe-KAT" id="y4m-kE-Oli"/>
+                        <outlet property="editButton3" destination="VXL-uD-Iho" id="N1I-Yl-h7C"/>
+                        <outlet property="editButton4" destination="vRx-dp-usR" id="QF9-GM-26p"/>
+                        <outlet property="editButton5" destination="2hX-g4-mof" id="OGc-Y7-z3f"/>
                         <outlet property="editButtonView" destination="MLo-Oz-9ew" id="olx-Na-5Jl"/>
                         <outlet property="imageContainerTrailingViewLeadingConstraint" destination="3Of-XY-jlA" id="Tsd-3E-KJS"/>
                         <outlet property="imageContainerView" destination="dO2-in-Qrd" id="UU9-Aj-It7"/>
                         <outlet property="photoImageView" destination="4hT-lE-ril" id="PLG-Pv-gw9"/>
+                        <outlet property="photoImageView2" destination="cLL-wI-EnK" id="d8h-ex-B4A"/>
+                        <outlet property="photoImageView3" destination="FIG-bV-RA2" id="gtt-VH-Say"/>
+                        <outlet property="photoImageView4" destination="FYw-1F-W7J" id="64h-bx-CnJ"/>
+                        <outlet property="photoImageView5" destination="TZt-Hl-BzA" id="xG7-wK-ynt"/>
                         <outlet property="saveButton" destination="ueT-4a-Aly" id="IeQ-nh-8CZ"/>
                         <outlet property="superViewBottomImageContainerBottomConstraint" destination="MnL-sN-r6K" id="8f1-mv-TS8"/>
                         <outlet property="superviewTopViewTopConstraint" destination="yFO-pN-IVw" id="b4Y-rE-0Cf"/>
@@ -1332,6 +1352,46 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="V5c-ka-Vea" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3204.375" y="301.05633802816902"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="sfV-5P-7gH">
+            <objects>
+                <viewController id="QbT-Kp-O2E" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="VI6-E8-ZRH"/>
+                        <viewControllerLayoutGuide type="bottom" id="PkE-Pw-rto"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="mAm-JK-zoz">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="main-background" translatesAutoresizingMaskIntoConstraints="NO" id="PZr-km-NPA">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hbP-zR-RFU">
+                                <rect key="frame" x="40" y="62" width="240" height="128"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XRx-sZ-dlN">
+                                <rect key="frame" x="139" y="33" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="PZr-km-NPA" firstAttribute="top" secondItem="mAm-JK-zoz" secondAttribute="top" id="257-dW-8Vz"/>
+                            <constraint firstAttribute="bottom" secondItem="PZr-km-NPA" secondAttribute="bottom" id="7Ra-5C-dUK"/>
+                            <constraint firstAttribute="trailing" secondItem="PZr-km-NPA" secondAttribute="trailing" id="GwI-zH-SbZ"/>
+                            <constraint firstItem="PZr-km-NPA" firstAttribute="leading" secondItem="mAm-JK-zoz" secondAttribute="leading" id="Q7v-sp-vrE"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tJv-wY-q9F" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3939.375" y="310.56338028169017"/>
         </scene>
         <!--Choose Mode View Controller-->
         <scene sceneID="30W-cc-vhp">
